// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluggableRadarChart > Sort config > should return expected sort config for 0 M + 0 VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [],
  "defaultSort": [],
  "disabled": true,
  "disabledExplanation": "Sorting is not possible for this visualization configuration.",
  "supported": true,
}
`;

exports[`PluggableRadarChart > Sort config > should return expected sort config for 0 M + 1 VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [],
  "defaultSort": [],
  "disabled": true,
  "supported": true,
}
`;

exports[`PluggableRadarChart > Sort config > should return expected sort config for 1 M + 0 VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [],
  "defaultSort": [],
  "disabled": true,
  "disabledExplanation": "Sorting is not possible for this visualization configuration.",
  "supported": true,
}
`;

exports[`PluggableRadarChart > Sort config > should return expected sort config for 1 M + 1 VB + 1 SEG 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableRadarChart > Sort config > should return expected sort config for 1 M + 1 VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableRadarChart > Sort config > should return expected sort config for 2 M + 1 VB + 1 SEG 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableRadarChart > Sort config > should return expected sort config for 2 M + 1 VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableRadarChart > should return reference point with Date in trend even when it was the second attribute 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "trend",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "metric",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:radar/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
        "warningMessage": "To add additional metric, remove <span class="attr-field-icon" /> from <span class="stack-by">segment by</span>",
      },
      "segment": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsDuplicateDates": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:radar/bucket-title-segment.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "Segment by",
      },
      "trend": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsDuplicateDates": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:radar/bucket-title-trend.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {
      "supportsFilteringRecommendation": true,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
  },
}
`;

exports[`PluggableRadarChart > should return reference point with one trend and one segment 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "trend",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "metric",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:radar/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
        "warningMessage": "To add additional metric, remove <span class="attr-field-icon" /> from <span class="stack-by">segment by</span>",
      },
      "segment": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsDuplicateDates": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:radar/bucket-title-segment.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "Segment by",
      },
      "trend": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsDuplicateDates": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:radar/bucket-title-trend.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {
      "supportsFilteringRecommendation": true,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
  },
}
`;

exports[`PluggableRadarChart > should reuse all measures, only one category and no segment 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
        {
          "aggregation": null,
          "attribute": "af2Ewj9Re2vK",
          "localIdentifier": "m2",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
        {
          "aggregation": null,
          "attribute": "dt.opportunitysnapshot.snapshotdate",
          "localIdentifier": "m3",
          "showInPercent": null,
          "showOnSecondaryAxis": true,
          "type": "metric",
        },
        {
          "aggregation": null,
          "attribute": "acfWntEMcom0",
          "localIdentifier": "m4",
          "showInPercent": null,
          "showOnSecondaryAxis": true,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "trend",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "filters": {
    "items": [
      {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": [
          {
            "attribute": "attr.owner.department",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": {
    "sortItems": [
      {
        "attributeSortItem": {
          "attributeIdentifier": "a1",
          "direction": "asc",
        },
      },
    ],
  },
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "metric",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:radar/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
      },
      "segment": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsDuplicateDates": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:radar/bucket-title-segment.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "Segment by",
        "warningMessage": "To segment by, an visualization can have only one metric",
      },
      "trend": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsDuplicateDates": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:radar/bucket-title-trend.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {
      "supportsFilteringRecommendation": true,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
  },
}
`;
